--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
